--- a/src/main/resources/static/expense/expense.html
+++ b/src/main/resources/static/expense/expense.html
@@ -83,6 +83,7 @@
                                             <th>Name</th>
                                             <th>Description</th>
                                             <th>Category</th>
+                                            <th>Amount</th>
                                             <th>Action</th>
                                         </tr>
                                     </thead>
@@ -94,6 +95,7 @@
                                             <th>Name</th>
                                             <th>Description</th>
                                             <th>Category</th>
+                                            <th>Amount</th>
                                             <th></th>
                                         </tr>
                                     </tfoot>
