--- a/src/main/resources/static/expense/expenseCreate.html
+++ b/src/main/resources/static/expense/expenseCreate.html
@@ -68,6 +68,9 @@
                                     <div class="input-group"><span class="input-group-text">Date </span><input class="form-control" type="date" name="expensedate"/></div>
                                 </div>
                                 <div class="form-group mb-3">
+                                    <div class="input-group"><span class="input-group-text">Amount </span><input class="form-control" type="text" name="amount"></div>
+                                </div>
+                                <div class="form-group mb-3">
                                     <div class="input-group">
                                         <span class="input-group-text">Category </span>
                                         <select class="form-select" aria-label="Default select example" id="dropdown-boot">
@@ -118,7 +121,7 @@
             }
 
             $("#form").submit(function (event) {
-                postExpense(getExpenseJSON(null, $('input[name=name]').val(), $('input[name=description]').val(), $('.form-select').val(), selectedTextPick), function (result) {
+                postExpense(getExpenseJSON(null, $('input[name=name]').val(), $('input[name=description]').val(), $('input[name=amount]').val(), $('.form-select').val(), selectedTextPick), function (result) {
                     window.location.replace("/expense");
                 }, function (error) {
                     $("#error-modal").modal('show');
